# mpsc

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md
benchmarks/: mpsc_queue_benchmark.cpp
include/: mpsc_queue.hpp
tests/: mpsc_queue_adversarial_test.cpp  mpsc_queue_test.cpp
